@@ -1,5 +1,6 @@
 Changes in Version 1.4.3
   o Fixed a bug in which 'curveScaleNodeCorrection' defaulted to FALSE instead of TRUE
+  o qgraph() now gives a warning if the user uses a not-documentated argument.
 
 Changes in Version 1.4.2
   o centrality_auto no longer outputs igraph messages to the console
